# django-invalidate-cache

./: CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
changelog.d/: 20250519_132357_69142055+PrebenFUNBIT.md
src/invalidatecache/: __init__.py  apps.py  checks.py  utils.py  views.py  wagtail_hooks.py
src/invalidatecache/management/commands/: invalidate_cache.py
src/invalidatecache/templates/invalidatecache/admin/: form.html
testapp/: requirements.txt
testapp/home/: models.py
testapp/home/templates/home/: home_page.html
testapp/testapp/: wsgi.py
testapp/testapp/settings/: base.py  dev.py
testapp/testapp/templates/: base.html
testapp/testapp/templates/inc/: footer.html  header.html
tests/: test_admin.py  test_checks.py  test_command.py  test_request.py
