[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "django-invalidate-cache"
version = "1.0.1"
description = "Helpers for sending invalidate requests to a http endpoint (such as a nextjs api route)."
readme = "README.md"
authors = [{ "name" = "Funbit AS", "email" = "webmaster@funbit.no" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
]

[project.urls]
repository = "https://github.com/Funbit-AS/django-invalidate-cache"

[tool.pytest.ini_options]
pythonpath = ". testapp"
DJANGO_SETTINGS_MODULE = "testapp.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db -n auto"

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"

[tool.scriv]
format = "md"
version = "literal: pyproject.toml: project.version"